<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.ttm.quaker.TaWan"
    android:background="@drawable/sack_background">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/food"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/tawan"/>
            <TextView
                android:id="@+id/TaWanTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ta_Wan_Name"
                android:layout_marginTop="3pt"
                android:layout_below="@+id/food"
                android:textSize="10pt"
                    android:textColor="#000000"/>
            <TextView
                android:id="@+id/description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ta_Wan_Description"
                android:layout_below="@+id/TaWanTitle"
                android:layout_marginTop="4pt"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ta_Wan_Address"
                android:textColor="#000000"
                android:layout_marginTop="3pt"
                android:layout_below="@+id/description"/>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
