<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ttm.quaker.NewProduct"
    android:background="@drawable/sack_background">
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/range_products"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/products"
            android:adjustViewBounds="true"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"/>
        <LinearLayout
            android:id="@+id/true_delights_layout"
            android:layout_width="fill_parent"
            android:layout_height="30pt"
            android:layout_below="@+id/range_products"
            android:background="#e90909"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/truedelights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/range_products"
                android:src="@drawable/true_delights"
                android:adjustViewBounds="true"
                android:paddingLeft="8dp"
                android:paddingRight="75dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_delights"
                    android:textColor="#fefefe"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="7pt" />
        </LinearLayout>
        <View
            android:id="@+id/Div1"
            android:layout_width="fill_parent"
            android:layout_height="1pt"
            android:layout_below="@+id/true_delights_layout"
            android:background="@color/divider"/>
        <LinearLayout
            android:id="@+id/quaker_grits_layout"
            android:layout_width="fill_parent"
            android:layout_height="30pt"
            android:layout_below="@+id/Div1"
            android:background="#e90909"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/quakergrits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/range_products"
                android:src="@drawable/quakergrits"
                android:adjustViewBounds="true"
                android:paddingLeft="8dp"
                android:paddingRight="90dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quaker_grits"
                android:textColor="#fefefe"
                android:textAlignment="center"
                android:layout_gravity="center_vertical"
                android:textSize="7pt" />
        </LinearLayout>
        <View
            android:id="@+id/Div2"
            android:layout_width="fill_parent"
            android:layout_height="1pt"
            android:layout_below="@+id/quaker_grits_layout"
            android:background="@color/divider"/>
        <LinearLayout
            android:id="@+id/real_medleys_layout"
            android:layout_width="fill_parent"
            android:layout_height="30pt"
            android:layout_below="@+id/Div2"
            android:background="#e90909"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/real_medleys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/range_products"
                android:src="@drawable/real_medley"
                android:adjustViewBounds="true"
                android:paddingLeft="8dp"
                android:paddingRight="70dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/real_medley"
                android:textColor="#fefefe"
                android:textAlignment="center"
                android:layout_gravity="center_vertical"
                android:textSize="7pt" />
        </LinearLayout>
        <View
            android:id="@+id/Div3"
            android:layout_width="fill_parent"
            android:layout_height="1pt"
            android:layout_below="@+id/real_medleys_layout"
            android:background="@color/divider"/>
        <LinearLayout
            android:id="@+id/instant_oatmeal_layout"
            android:layout_width="fill_parent"
            android:layout_height="30pt"
            android:layout_below="@+id/Div3"
            android:background="#e90909"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/instant_oatmeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/range_products"
                android:src="@drawable/instant_oatmeal"
                android:adjustViewBounds="true"
                android:paddingLeft="8dp"
                android:paddingRight="75dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instant_oatmeal"
                android:textColor="#fefefe"
                android:textAlignment="center"
                android:layout_gravity="center_vertical"
                android:textSize="7pt" />
        </LinearLayout>
        <View
            android:id="@+id/Div4"
            android:layout_width="fill_parent"
            android:layout_height="1pt"
            android:layout_below="@+id/instant_oatmeal_layout"
            android:background="@color/divider"/>
    </RelativeLayout>
</ScrollView>


</RelativeLayout>
